test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/label_file_scope_var_same_name.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: x
        None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CGoto: 
                TIdentifier: x
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: x
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[2]: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: x
                          None: 
                          Int: 
                          CExtern: 
                    CS: 
                      CLabel: 
                        TIdentifier: x
                        CReturn: 
                          CVar: 
                            TIdentifier: x
                            None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
