test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/local_var_follows_extern.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: i
        CSingleInit: 
          CConstant: 
            CConstInt: 
              TInt: 10
            None: 
          None: 
        Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  None: 
                  Int: 
                  CExtern: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  None: 
                  Int: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: i
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
